...
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/ProjectName"
            tools:text="Project Name"/>

        <TextView
            android:id="@+id/project_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/projecthead_text_margin"
            android:textAppearance="@style/ProjectHead"
            tools:text="The Project Head"/>
...
