...
            style="@style/ContentCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_cardview_margin">

            <TextView
                android:id="@+id/project_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryText"
                tools:text="Description"/>
        </android.support.v7.widget.CardView>
...
