...

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/projects_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <!-- Not using a compound drawable, because its size cannot be set in xml, so
     it'll have to be done in code, and I want to minimize mixing code and UI -->
...
